bornan/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glpi-svc
  namespace: client-bornan
spec:
  type: ClusterIP
  selector:
    app: glpi
  ports:
    - port: 80
      targetPort: 80
